--- a/index.html
+++ b/index.html
@@ -9,32 +9,52 @@
       color: #f1f5f9;
       font-family: sans-serif;
       padding: 2em;
+      margin: 0;
     }
+
     h1 {
       color: #38bdf8;
+      margin-bottom: 1em;
     }
+
     input {
       padding: 0.5em;
       font-size: 1em;
+      width: 300px;
+      border-radius: 4px;
+      border: 1px solid #334155;
+      margin-right: 0.5em;
     }
+
     button {
-      padding: 0.5em 1em;
+      padding: 0.5em 1.2em;
       font-size: 1em;
       background-color: #22c55e;
       color: white;
       border: none;
+      border-radius: 4px;
       cursor: pointer;
     }
+
+    button:hover {
+      background-color: #16a34a;
+    }
+
     .result {
-      margin-top: 2em;
+      margin-top: 1.5em;
       padding: 1em;
       border: 1px solid #334155;
       border-radius: 8px;
       background-color: #1e293b;
     }
+
     .error {
-      color: red;
+      color: #f87171;
       margin-top: 1em;
+    }
+
+    h3 {
+      margin: 0 0 0.3em 0;
     }
   </style>
 </head>
@@ -54,12 +74,13 @@
         const response = await fetch(`/api/ticker?ticker=${ticker}`);
         const data = await response.json();
 
-        if (response.status !== 200 || !Array.isArray(data)) {
-          output.innerHTML = `<p class="error">Something went wrong. Try again later.</p>`;
+        if (!Array.isArray(data)) {
+          output.innerHTML = `<p class="error">Unexpected response format.</p>`;
           return;
         }
 
-        output.innerHTML = "";
+        output.innerHTML = "<h2>Results:</h2>";
+
         data.forEach(result => {
           const sentiment = result.sentiment !== null
             ? `${result.sentiment.toFixed(2)}`
@@ -68,14 +89,14 @@
 
           output.innerHTML += `
             <div class="result">
-              <h2>${result.ticker}</h2>
+              <h3>${result.ticker}</h3>
               <p><strong>Sentiment Score:</strong> ${sentiment}</p>
               <p><strong>Article:</strong> ${article}</p>
             </div>
           `;
         });
       } catch (err) {
-        console.error(err);
+        console.error("Error fetching sentiment:", err);
         output.innerHTML = `<p class="error">Something went wrong. Try again later.</p>`;
       }
     }
